crates/assay-types/tests/snapshots/schema_snapshots__conflict-resolution-config-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
assertion_line: 344
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Configuration for AI-driven conflict resolution during merge.\n\nWhen `enabled` is `true`, the merge runner will attempt to resolve\nconflicts using an AI model instead of aborting or skipping.",
  "properties": {
    "enabled": {
      "description": "Whether AI conflict resolution is active.",
      "type": "boolean"
    },
    "model": {
      "default": "claude-sonnet-4-20250514",
      "description": "Model identifier for the resolver (e.g. `\"claude-sonnet-4-20250514\"`).",
      "type": "string"
    },
    "timeout_secs": {
      "default": 120,
      "description": "Maximum seconds to wait for the resolver before aborting.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    }
  },
  "required": [
    "enabled"
  ],
  "title": "ConflictResolutionConfig",
  "type": "object"
}
