crates/assay-types/tests/snapshots/schema_snapshots__conflict-resolution-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "ConflictFileContent": {
      "additionalProperties": false,
      "description": "Original or resolved content of a single file captured during conflict resolution.\n\nUsed in [`ConflictResolution`] to store both the original conflict-marker content\nand the AI-resolved content for each conflicted file.",
      "properties": {
        "content": {
          "description": "Full file content (with conflict markers for originals; resolved for outputs).",
          "type": "string"
        },
        "path": {
          "description": "Path relative to the repository root.",
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Audit record for a single AI-resolved merge conflict.\n\nCaptured by the merge runner when AI conflict resolution succeeds and stored\nin [`MergeReport::resolutions`]. Enables post-run inspection of what the AI\nchanged and whether the optional validation command accepted the result.",
  "properties": {
    "conflicting_files": {
      "description": "Paths of files that had conflict markers, relative to the repo root.",
      "items": {
        "type": "string"
      },
      "type": "array"
    },
    "original_contents": {
      "description": "Original file contents (with conflict markers) before AI resolution.",
      "items": {
        "$ref": "#/$defs/ConflictFileContent"
      },
      "type": "array"
    },
    "resolved_contents": {
      "description": "Resolved file contents after AI resolution (conflict markers removed).",
      "items": {
        "$ref": "#/$defs/ConflictFileContent"
      },
      "type": "array"
    },
    "resolver_stdout": {
      "description": "Raw stdout from the resolver subprocess (AI-generated content).",
      "type": "string"
    },
    "session_name": {
      "description": "The session whose branch produced the conflict.",
      "type": "string"
    },
    "validation_passed": {
      "description": "Whether the optional validation command accepted the resolution.\n\n`None` when no `validation_command` was configured.\n`Some(true)` when validation passed; `Some(false)` when it rejected the result.",
      "type": [
        "boolean",
        "null"
      ]
    }
  },
  "required": [
    "session_name",
    "conflicting_files",
    "original_contents",
    "resolved_contents",
    "resolver_stdout"
  ],
  "title": "ConflictResolution",
  "type": "object"
}
