crates/assay-types/tests/snapshots/schema_snapshots__criteria-library-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "Criterion": {
      "additionalProperties": false,
      "description": "A single acceptance criterion attached to a spec.\n\nEach criterion has a name, description, and an optional shell command\nthat can verify it programmatically. When `kind` is `AgentReport`, the\ncriterion is evaluated by an agent using the `prompt` field for guidance.",
      "properties": {
        "cmd": {
          "description": "Optional shell command to verify this criterion.\nOmitted from serialized output when `None`.\nMutually exclusive with `kind = AgentReport`.",
          "type": [
            "string",
            "null"
          ]
        },
        "description": {
          "description": "Detailed description of what this criterion checks.",
          "type": "string"
        },
        "enforcement": {
          "anyOf": [
            {
              "$ref": "#/$defs/Enforcement"
            },
            {
              "type": "null"
            }
          ],
          "description": "Enforcement level override for this criterion. `None` means \"use the\nspec-level default from `[gate]` section\" (which itself defaults to `required`)."
        },
        "kind": {
          "anyOf": [
            {
              "$ref": "#/$defs/CriterionKind"
            },
            {
              "type": "null"
            }
          ],
          "description": "Criterion evaluation kind. When set to `AgentReport`, this criterion\nis evaluated by an agent (not a shell command). Mutually exclusive\nwith `cmd` and `path`."
        },
        "name": {
          "description": "Human-readable name for this criterion.",
          "type": "string"
        },
        "path": {
          "description": "Optional file path to check for existence.\nWhen set (and `cmd` is `None`), the criterion evaluates as a `FileExists` gate.",
          "type": [
            "string",
            "null"
          ]
        },
        "prompt": {
          "description": "Instruction prompt for agent-evaluated criteria.\nProvides guidance to the agent on what to evaluate.",
          "type": [
            "string",
            "null"
          ]
        },
        "requirements": {
          "description": "Requirement IDs this criterion traces to (e.g., `[\"REQ-FUNC-001\"]`).",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "timeout": {
          "description": "Optional timeout in seconds for this criterion's command.\nOverrides the global default but is overridden by CLI `--timeout`.",
          "format": "uint64",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        },
        "when": {
          "$ref": "#/$defs/When",
          "description": "Declares when this criterion is evaluated. Defaults to `When::SessionEnd`\n(evaluation at session end). When set to `When::AfterToolCalls { .. }` or\n`When::OnEvent { .. }`, the criterion becomes a mid-session checkpoint."
        }
      },
      "required": [
        "name",
        "description"
      ],
      "type": "object"
    },
    "CriterionKind": {
      "description": "The kind of evaluation a criterion uses.\n\nWhen set on a criterion, determines how it is evaluated.\n`AgentReport` means the criterion is evaluated by an agent\nvia structured reasoning rather than a shell command.\n\nSerializes using an internally tagged format with `type` as the tag key,\nusing `snake_case` for variant names (e.g. `{\"type\":\"agent_report\"}`).\nOld PascalCase format (`{\"type\":\"AgentReport\"}`) is accepted via aliases\nfor backward compatibility.",
      "oneOf": [
        {
          "description": "Evaluated by an agent via structured reasoning.",
          "properties": {
            "type": {
              "const": "agent_report",
              "type": "string"
            }
          },
          "required": [
            "type"
          ],
          "type": "object"
        },
        {
          "description": "Criterion evaluated by counting events of a given type in the agent\nsession log. Parameters mirror `GateKind::EventCount`.",
          "properties": {
            "event_type": {
              "description": "The event type to count, matching an `AgentEvent` serde tag.",
              "type": "string"
            },
            "max": {
              "description": "Inclusive upper bound on the matched event count. `None` means no upper bound.",
              "format": "uint32",
              "minimum": 0,
              "type": [
                "integer",
                "null"
              ]
            },
            "min": {
              "description": "Inclusive lower bound on the matched event count. `None` means no lower bound.",
              "format": "uint32",
              "minimum": 0,
              "type": [
                "integer",
                "null"
              ]
            },
            "type": {
              "const": "event_count",
              "type": "string"
            }
          },
          "required": [
            "type",
            "event_type"
          ],
          "type": "object"
        },
        {
          "description": "Criterion that passes only when no tool returned an error during the session.",
          "properties": {
            "type": {
              "const": "no_tool_errors",
              "type": "string"
            }
          },
          "required": [
            "type"
          ],
          "type": "object"
        }
      ]
    },
    "Enforcement": {
      "description": "Enforcement level for a gate criterion.\n\nDetermines whether a criterion failure blocks the gate (required)\nor is informational only (advisory).",
      "oneOf": [
        {
          "const": "required",
          "description": "Failure blocks the gate. This is the default.",
          "type": "string"
        },
        {
          "const": "advisory",
          "description": "Failure is informational; does not block the gate.",
          "type": "string"
        }
      ]
    },
    "When": {
      "description": "Declares when a gate criterion is evaluated.\n\nSpec authors use this to designate cheap event-based criteria as\nmid-session checkpoints while keeping expensive command/file gates\nat session end.\n\n# Warning on command/file gates at checkpoints\n\nUsing `AfterToolCalls` or `OnEvent` with a `cmd`- or `path`-based\ncriterion evaluates against a **partial working directory**. Prefer\n`EventCount` and `NoToolErrors` criteria for checkpoints.",
      "oneOf": [
        {
          "description": "Evaluate at the end of the session (default behavior).",
          "properties": {
            "type": {
              "const": "session_end",
              "type": "string"
            }
          },
          "required": [
            "type"
          ],
          "type": "object"
        },
        {
          "description": "Evaluate when the agent has emitted exactly N total tool calls.\nThe pipeline fires this trigger once when the cumulative tool-call\ncount reaches N.",
          "properties": {
            "n": {
              "description": "Tool-call threshold at which to evaluate. Enforced non-zero at\nboth the type level (`NonZeroU32`) and the serde boundary.",
              "format": "uint32",
              "minimum": 1,
              "type": "integer"
            },
            "type": {
              "const": "after_tool_calls",
              "type": "string"
            }
          },
          "required": [
            "type",
            "n"
          ],
          "type": "object"
        },
        {
          "description": "Evaluate when the most-recent event in the stream has a serde\ntype tag matching `event_type` (e.g. `\"tool_called\"`).",
          "properties": {
            "event_type": {
              "description": "Event type tag to match (matches `AgentEvent` serde tag).",
              "type": "string"
            },
            "type": {
              "const": "on_event",
              "type": "string"
            }
          },
          "required": [
            "type",
            "event_type"
          ],
          "type": "object"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "A named, versioned collection of criteria that can be included into gate specs.\n\nLibraries are authored in TOML and referenced by slug from `gates.toml` files\nvia the `include = [\"lib-slug\"]` field. This allows common criteria (e.g., \"must\ncompile\", \"tests pass\") to be defined once and reused across many gate specs.",
  "properties": {
    "criteria": {
      "description": "Criteria provided by this library.",
      "items": {
        "$ref": "#/$defs/Criterion"
      },
      "type": "array"
    },
    "description": {
      "description": "Human-readable description. Omitted from serialized output when empty.",
      "type": "string"
    },
    "name": {
      "description": "Unique slug for this library (e.g. `\"rust-basics\"`).",
      "type": "string"
    },
    "tags": {
      "description": "Tags for categorization and filtering (e.g. `[\"rust\", \"build\"]`).\n\nOmitted from serialized output when empty.",
      "items": {
        "type": "string"
      },
      "type": "array"
    },
    "version": {
      "description": "Optional semver-compatible version string (e.g. `\"1.0.0\"`).\n\nStored as a plain string here; semver validation happens in `assay-core`.\nOmitted from serialized output when absent.",
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "name",
    "criteria"
  ],
  "title": "CriteriaLibrary",
  "type": "object"
}
