crates/assay-types/tests/snapshots/schema_snapshots__criterion-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
assertion_line: 59
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "A single acceptance criterion attached to a spec.\n\nEach criterion has a name, description, and an optional shell command\nthat can verify it programmatically. When `cmd` is `None`, the criterion\nis evaluated manually (or in future phases, via an agent `prompt` field).",
  "properties": {
    "cmd": {
      "description": "Optional shell command to verify this criterion.\nOmitted from serialized output when `None`.",
      "type": [
        "string",
        "null"
      ]
    },
    "description": {
      "description": "Detailed description of what this criterion checks.",
      "type": "string"
    },
    "name": {
      "description": "Human-readable name for this criterion.",
      "type": "string"
    }
  },
  "required": [
    "name",
    "description"
  ],
  "title": "Criterion",
  "type": "object"
}
