crates/assay-types/tests/snapshots/schema_snapshots__enforcement-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Enforcement level for a gate criterion.\n\nDetermines whether a criterion failure blocks the gate (required)\nor is informational only (advisory).",
  "oneOf": [
    {
      "const": "required",
      "description": "Failure blocks the gate. This is the default.",
      "type": "string"
    },
    {
      "const": "advisory",
      "description": "Failure is informational; does not block the gate.",
      "type": "string"
    }
  ],
  "title": "Enforcement"
}
